refactor: extractObjectNameFromUrl메서드 storage.googleapis.com패턴도 파싱